--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 #encabezado{
     border-radius: 10px;
     /* From https://css.glass */
-background: rgb(9 8 10 / 50%);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.0);
-backdrop-filter: blur(3.4px);
--webkit-backdrop-filter: blur(3.4px);
+    background: rgb(4 41 76 / 64%);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgb(73, 145 ,160);
+    backdrop-filter: blur(3.4px);
+    -webkit-backdrop-filter: blur(3.4px);
     display: block;
 }
 h1{
@@ -88,15 +88,13 @@ h2{
     padding-bottom: 15.5px;
     margin-left: 14px;
     color: white;
-    
 }
-
 #trabajos{
-    background: rgba(255, 255, 255, 0.07);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(3.4px);
--webkit-backdrop-filter: blur(3.4px);
+    background: rgb(4 41 76 / 29%);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgb(73, 145 ,160);
+    backdrop-filter: blur(3.4px);
+    -webkit-backdrop-filter: blur(3.4px);
     display: block;
     height: max-content;
     border-radius: 10px;
@@ -106,6 +104,7 @@ backdrop-filter: blur(3.4px);
     width: fit-content;
     margin: auto;
     margin-top: 33px;
+    text-shadow: 0 4px 30px rgb(248 251 252 / 55%);
 }
 #imagen{
     width: 300px;
@@ -116,6 +115,7 @@ backdrop-filter: blur(3.4px);
     margin-left: 25px;
     border-radius: 18px;
     transition: all .5s;
+  
 
 }
 #imagen:hover{
