--- a/Tabla/Tabla.css
+++ b/Tabla/Tabla.css
@@ -1,44 +1,70 @@
-body{
-    background: repeating-linear-gradient(89deg, blue,40%, pink);
-
-}
-table {
-    width: 50%;
-}
-#datos{
-    border-style:solid;
-}
-td {
-    text-align: center;
-   
-}
-th{
-    background-color: rgb(243, 168, 180);
-    border-style: solid;
+#contenedor{
+    width: 100%;
+    height: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#ingresar {
-
-    display: none;
-    margin-left: 20%;
-}
-input{
-    background: linear-gradient(
-        45deg,
-        rgb(66, 66, 248),60%, pink );
-}
-button {
-    content: none;
-    background-color:transparent 90px ;
-    border: none;
-    text-decoration: none;
-    background-image: linear-gradient(red);
-    background-position: 0% 100%;
-    background-repeat: no-repeat;
-    background-size: 0% 3px;
-    transition: background-size .3s;
+#tabla{
+    margin: auto; 
 }
 
-button:hover, button:focus {
-    background-size: 100% 2px;
+#agregar, #mostrar{
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-style: none;
+    padding: 15px;
+    font-family: system-ui;
+    background-color: aquamarine;
+    cursor: pointer;
+}
+
+#agregar{
+    background-color: #dae5ff;
+}
+
+
+#columnas{
+    font-family: system-ui;
+}
+
+
+#columnas td{
+    padding-right: 100pt;
+    background-color: rgba(73, 73, 73, 0.63);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-color: #a2a2a2;
+    padding-left: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+#infoFilas td{
+    background-color: #e4e4e4;
+    padding-left: 5px;
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-color: gray;
+    font-family: system-ui;
+    font-size: 15px;
+}
+
+#columnas td:first-child{
+    border-left-style: none;
+}
+
+#infoFilas td:first-child{
+    border-style: none;
+}
+
+#in1, #in2, #in3{
+    border-style: none;
+    padding: 5px;
+    background-color: #e4e4e4 !important;
+    border-bottom-style: solid;
+    outline-style: none;
+    width: 98%;
 }
